--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                         <div class="detail-box">
                                             <h1>
                                                 Github<br />
-                                                Pages
+                                                Pages by Don M Johnny
                                             </h1>
                                             <p>
                                                 Hosting your first GitHub web
